--- a/src/app/pages/products/electronics/electronics.component.html
+++ b/src/app/pages/products/electronics/electronics.component.html
@@ -1,11 +1,13 @@
-<div class="container">
+<div class="m-5">
     <div class="row">
-        <div class="col-md-3">
+        <div class="col-lg-2 col-md-3 d-none d-md-block">
             <app-sidebar [products]="products" (filterProducts)="updateFilteredProducts($event)"></app-sidebar>
         </div>
-        <div class="col-md-9">
-            <div class="row">
-                <app-product-card *ngFor="let product of filteredProducts" [product]="product"></app-product-card>
+        <div class="col-lg-10 col-md-9">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-3">
+                <div class="col" *ngFor="let product of filteredProducts">
+                    <app-product-card [product]="product"></app-product-card>
+                </div>
             </div>
         </div>
     </div>
