--- a/src/app/pages/products/furniture/furniture.component.html
+++ b/src/app/pages/products/furniture/furniture.component.html
@@ -1,6 +1,14 @@
-<h2>Furniture</h2>
-<div class="row">
-    <div *ngFor="let product of products" class="col-md-4">
-        <app-product-card [product]="product"></app-product-card>
+<div class="m-5">
+    <div class="row">
+        <div class="col-lg-2 col-md-3 d-none d-md-block">
+            <app-sidebar [products]="products" (filterProducts)="updateFilteredProducts($event)"></app-sidebar>
+        </div>
+        <div class="col-lg-10 col-md-9">
+            <div class="row row-cols-1 row-cols-sm-2 row-cols-md-2 row-cols-lg-4 g-3">
+                <div class="col" *ngFor="let product of filteredProducts">
+                    <app-product-card [product]="product"></app-product-card>
+                </div>
+            </div>
+        </div>
     </div>
 </div>
