--- a/src/app/components/product-card/product-card.component.css
+++ b/src/app/components/product-card/product-card.component.css
@@ -12,6 +12,14 @@
     padding: 10px;
 }
 
+.card-footer {
+background-color: transparent !important;
+border: none !important;
+
+
+}
+
+
 .product-image {
     width: 100%;
     height: 195px;
